test/learn_dart/mirror_test.dart
//flutter project can not use mirror
// import "dart:mirrors";  // error

void main() {
  // var c = reflectClass(X).declarations;
  // for (var cc in c.entries) {
  //   print("object ${cc.key}  ${cc.value} /r/n");
  // }
  // var x = c[Symbol("X")] as MethodMirror;
  // print("object x}");
  //
  // for (ParameterMirror xx in x.parameters) {
  //   print("object ${xx}  | ${xx.location} | ${xx.defaultValue}");
  // }
}
